--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.10.0",
-    "bcrypt": "^6.0.0",
+    "axios": "^1.6.2",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.0",
-    "express": "^5.1.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.4",
-    "multer": "^2.0.2"
+    "mongoose": "^7.6.3",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "tailwindcss": "^4.1.11"
+    "nodemon": "^3.0.1",
+    "tailwindcss": "^3.3.5"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
