--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://snvcamis01:Jaydeep123@jaydeep.0rz2wf0.mongodb.net/?retryWrites=true&w=majority&appName=Jaydeep
+MONGO_URI=mongodb+srv://Jaydeepsnv:Jaydeep%40123@cluster0.1569s8x.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET= ksjdhf7843y28hf43hf324jkhf
 BETA_BLASTER_API_KEY=your_beta_blaster_api_key
 PORT=5000
