--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ MONGO_URI=mongodb+srv://Jaydeepsnv:Jaydeep%40123@cluster0.1569s8x.mongodb.net/?r
 JWT_SECRET= ksjdhf7843y28hf43hf324jkhf
 BETA_BLASTER_API_KEY=your_beta_blaster_api_key
 PORT=5000
+CLOUDINARY_CLOUD_NAME=dpz5dfoun
+CLOUDINARY_API_KEY=378143716425388
+CLOUDINARY_API_SECRET=Rz9R8K1zv5C9uBtokREEzQSTykA
